feat: add some notes; refactor: res body struct; feat: remove jwt middleware; refactor: remove tag struct default value & add *pointer to resolve nil value problem; refactor: rename some keys;
