# pkg/app/app.go
@@ -14,7 +14,12 @@ type Response struct {
 type Pager struct {
 	Page      int `json:"page"`
 	PageSize  int `json:"page_size"`
-	TotalRows int `json:"total_rows"`
+	TotalRows int `json:"total"`
+}
+
+type ResponseBody struct {
+	List any `json:"list"`
+	Pager
 }
 
 func NewResponse(ctx *gin.Context) *Response {
@@ -23,18 +28,22 @@ func NewResponse(ctx *gin.Context) *Response {
 
 func (r *Response) ToResponse(data interface{}) {
 	if data == nil {
-		data = gin.H{}
+		data = gin.H{"code": errcode.Success.Code(), "msg": errcode.Success.Msg(), "data": nil}
 	}
 	r.Ctx.JSON(http.StatusOK, data)
 }
 
 func (r *Response) ToResponseList(list interface{}, totalRows int) {
 	r.Ctx.JSON(http.StatusOK, gin.H{
-		"list": list,
-		"pager": Pager{
-			Page:      GetPage(r.Ctx),
-			PageSize:  GetPageSize(r.Ctx),
-			TotalRows: totalRows,
+		"code": errcode.Success.Code(),
+		"msg":  errcode.Success.Msg(),
+		"data": ResponseBody{
+			List: list,
+			Pager: Pager{
+				Page:      GetPage(r.Ctx),
+				PageSize:  GetPageSize(r.Ctx),
+				TotalRows: totalRows,
+			},
 		},
 	})
 }
